--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="">
+    <meta name="description" content="Emoji codes from https://github.com/jollygoodcode/emoji-keywords/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Twiiter Emoji (Twemoji) Cheatsheet</title>
   </head>
   <body>
     <h1>Twitter Emoji (Twemoji) Cheatsheet</h1>
@@ -28,6 +28,7 @@
         margin: 4px;
       }
       img.emoji {
+        cursor: pointer;
         height: 1.5rem;
         width: 1.5rem;
         margin: 0 .05rem 0 .1rem;
