Linkify Open sourced [ci skip]

--- a/index.html
+++ b/index.html
@@ -5031,7 +5031,7 @@
     </ul>
 
     <footer class="footer">
-      <p>Open sourced under MIT. Copyright 2016 <a href="https://twitter.com/JollyGoodCode">@JollyGoodCode</a>.</p>
+      <p><a href="https://github.com/jollygoodcode/twemoji">Open sourced</a> under MIT. Copyright 2016 <a href="https://twitter.com/JollyGoodCode">@JollyGoodCode</a>.</p>
     </footer>
 
     <script>
